Fix landing overflow

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -163,7 +163,7 @@
 	}
 
 	.art-left {
-		width: 30vw;
+		width: 27vw;
 	}
 
 	.art-right {
